Reset Password & Added Transporter-Id in Endpoints
